# Sona

./: DESIGN_PROMPT_MOBILE.md  README.md  gradlew  local.properties  settings.gradle.kts  usb_audio_engine_architecture.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  descriptor_parser.cpp  descriptor_parser.h  logging.h  native_bridge.cpp  ring_buffer.h  usb_audio_engine.cpp  usb_audio_engine.h
app/src/main/res/color/: bottom_nav_item_tint.xml
app/src/main/res/drawable/: bg_album_art.xml  bg_album_art_soft.xml  bg_app_canvas.xml  bg_app_canvas_soft.xml  bg_badge_bit_perfect.xml  bg_chip_primary.xml  bg_chip_secondary.xml  bg_chip_surface.xml  bg_circle_secondary.xml  bg_circle_surface.xml  bg_circle_surface_active.xml  bg_glass_chip.xml  bg_mode_pill.xml  bg_nav_shell.xml  bg_panel_card_high.xml  bg_panel_slot.xml  bg_play_btn_warm.xml  bg_primary_button.xml  bg_route_card.xml  bg_route_card_active.xml  bg_route_indicator_active.xml  bg_secondary_button.xml  bg_signal_node.xml  bg_top_bar_soft.xml  bottom_nav_item_background.xml  ic_menu_bars.xml  ic_nav_playing.xml  ic_pause_vector.xml  ic_play_vector.xml  ic_shuffle_vector.xml  (+1 more)
design/claymorphism_soft_tactile/: DESIGN.md
design/now_playing/: code.html
design/vibrant_soft_ui_bit_perfect_player/: code.html
design/vibrant_soft_ui_dsp_player/: code.html
design/vibrant_soft_ui_library_dashboard/: code.html
stitch_purestream_bit_perfect_audio/audio_configuration/: code.html
stitch_purestream_bit_perfect_audio/obsidian_sonic/: DESIGN.md
(+41 files in other folders)
